--- a/Jump/.gitignore
+++ b/Jump/.gitignore
@@ -33,6 +33,16 @@ local.properties
 build/
 /*/build*
 .idea/
+.idea
+.gradle
+.gradle/**
+.gradle/**/*
+gradlew
+gradlew.bat
+gradle/
+build
+build/**
+build/**/*
 
 
 #NDK
